# ocean_shop

./: .gitignore  notetest.ipynb  pyproject.toml  schema.yml  secret_key.txt  tips.txt  web.config
.ipynb_checkpoints/: notetest-checkpoint.ipynb
core/: format_files.py  local_settings.py  qlschema.py  settings.py  urls.py
inventory/: admin.py  models.py  models2.py  qlschema.py  schema.py  serializers.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_productoffer_offer_typef.py  0003_remove_productoffer_offer_typef.py  0004_productoffer_type.py  0005_category_font_awesome_category_icon_and_more.py  0006_alter_category_font_awesome.py  0007_rename_filter_name_filter_name_alter_product_image_and_more.py
shop/: models.py  urls.py
shop/scripts/: fakedata.py
